# comparing-docs

./: .gitignore  README.md  README_DEPLOY.md  SECURITY_DEPLOY_CHECKLIST.md  SECURITY_REASSESSMENT.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: security.yml
.streamlit/: secrets.toml.example
src/: __init__.py  app.py  auth.py  config.py  document_loader.py  embedding_service.py  evaluator.py  matcher.py  models.py  normalizer.py  pdf_report.py  report_generator.py  subject_parser.py  subject_table.py  text_extractor.py
tests/: test_auth.py  test_document_limits.py  test_document_loader_security.py  test_matcher.py  test_normalizer.py  test_pdf_report.py  test_report_generator.py  test_subject_parser.py  test_text_extractor_security.py
