[project]
name = "comparing-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.3",
    "reportlab>=4.5.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
